--- a/style.css
+++ b/style.css
@@ -237,12 +237,24 @@ Vi este código en internet para hacer hero images con texto y no me funcionó :
   }
 
   .hero-text button:hover {
-    background-color: #c0c0bf;
+    background-color: goldenrod;
+    animation-name: button;
+    animation-duration: 4s;
+  }
+
+  @keyframes button {
+    from {background-color: goldenrod;}
+    to {background-color: teal;}
   }
 
   .hero-text a {
     text-decoration: none;
     color: #8A7A75;
+    transition: all .2s ease-in-out;
+  }
+
+  .hero-text a:hover {
+    transform: scale (1.1);
   }
 
   .hero-text p {
@@ -375,6 +387,8 @@ Vi este código en internet para hacer hero images con texto y no me funcionó :
     }
 }
 
+
+
 /* RESPONSIVE LARGE */
 
 @media (min-width: 1313px) {
@@ -413,6 +427,11 @@ Vi este código en internet para hacer hero images con texto y no me funcionó :
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    transition: all .2s ease-in-out;
+}
+
+.featured-product__image:hover {
+    transform: scale(1.3);
 }
 
   .featured-product__image img {
@@ -504,13 +523,16 @@ Vi este código en internet para hacer hero images con texto y no me funcionó :
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    transition: border-radius 0.6s;
     transition-timing-function: ease-in-out;
 }
 
 .highlight-img-1:hover {
-    border-top-left-radius: 100%;
-    border-top-right-radius: 100%;
+    border-radius:50%;
+    -webkit-border-radius:50%;
+    box-shadow: 0px 0px 15px 15px #ec731e;
+    -webkit-box-shadow: 0px 0px 15px 15px #ec731e;
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
 }
 
 .highlight-img-2 {
